# Keenetic-Manager

./: .editorconfig  .gitignore  COPYING  DEVELOP.md  KeeneticManager.spec  Makefile  README.md  Readme.md  config.py  dialogs.py  keenetic_router.py  main.py  meson.build  requirements.txt  router_manager.py  router_manager_app.py  test.py
.github/: workflows.yaml
.github/workflows/: action.yaml  build-macos.yml
data/: meson.build  ru.toxblh.KeeneticManager.desktop.in  ru.toxblh.KeeneticManager.gschema.xml  ru.toxblh.KeeneticManager.metainfo.xml.in  ru.toxblh.KeeneticManager.service.in
data/icons/: meson.build
flatpak/: README.md  flatpak-cargo-generator.py  flatpak-pip-generator  ru.toxblh.KeeneticManager.json  vscode-python-debug.json
po/: LINGUAS  POTFILES.in  en_GB.po  keeneticmanager.pot  meson.build  ru.po
scripts/: bundle-macos.sh  test-isolated.sh
src/: config.py  dialogs.py  keenetic_router.py  keeneticmanager.gresource.xml  keeneticmanager.in  main.py  meson.build  router_manager.py  router_manager_app.py  ui.py  window.ui
src/api/: keenetic_dns.py  keenetic_router.py  v2fly.py
src/data/: v2fly_list.json
src/helpers/: utils.py
src/pages/: clients.py  dns_routes.py  me.py  policy_toggle.py  settings.py  vpn.py  wg_server.py  zero_tier.py
src/pages/me/: me.py  me_card.ui  me_page.ui
src/widgets/: dialogs.py  policy_toggle.py  test_dialogs.py  ui.py
tests/: conftest.py  test_config.py  test_keenetic_router.py  test_policy_toggle.py  test_utils.py
